ProjectList content overflow issue resolved.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,21 @@
 @tailwind utilities;
 
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background:  #0F0F10;
+  border-radius: 2px;
+}
 .project-content {
   position: relative;
 }
